<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:weightSum="4"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:weightSum="3">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:src="@drawable/github"
                app:tint="@color/white"
                android:layout_weight="2"></ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/github"
                android:gravity="center"
                android:fontFamily="@font/poppins_bold"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:layout_weight="1"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:weightSum="3">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:src="@drawable/instagram"
                app:tint="@color/white"
                android:layout_weight="2"></ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/instagram"
                android:gravity="center"
                android:fontFamily="@font/poppins_bold"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:layout_weight="1"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:weightSum="3">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:src="@drawable/linkedin"
                app:tint="@color/white"
                android:layout_weight="2"></ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/linkedin"
                android:gravity="center"
                android:fontFamily="@font/poppins_bold"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:layout_weight="1"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:weightSum="3">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:src="@drawable/mail"
                app:tint="@color/white"
                android:layout_weight="2"></ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/mail"
                android:gravity="center"
                android:fontFamily="@font/poppins_bold"
                android:textSize="12dp"
                android:textColor="@color/white"
                android:layout_weight="1"></TextView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>